feat(frontend): navigation component
Include a base component for the navigation as starting point. Links are
defined in a separate const array

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,8 +8,10 @@
         <link rel="manifest" href="manifest.json">
         <script src="https://unpkg.com/htmx.org@1.6.1"></script>
         <script src="js/main.js"></script>
+        <script type="module" src="components/navigation/header/Header.js"></script>
     </head>
     <body>
-        Welcome to your app! Start by changing the index.html file.
+        <header-nav></header-nav>
+        <div id='content-body'></div>
     </body>
 </html> 
