--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,8 +7,8 @@
         <link rel="stylesheet" href="css/main.css">
         <link rel="manifest" href="manifest.json">
         <script src="https://unpkg.com/htmx.org@1.6.1"></script>
-        <script src="js/main.js"></script>
-        <script type="module" src="components/navigation/header/Header.js"></script>
+        <script type="module" src="js/main.js"></script>
+        <script type="module" src="components/navigation/header/Header.ts"></script>
     </head>
     <body>
         <header-nav></header-nav>
