--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,11 +7,13 @@
         <link rel="stylesheet" href="css/main.css">
         <link rel="manifest" href="manifest.json">
         <script src="https://unpkg.com/htmx.org@1.6.1"></script>
-        <script type="module" src="js/main.js"></script>
-        <script type="module" src="components/navigation/header/Header.ts"></script>
+        <script type="module" src="/js/main.js"></script>
+        <script type="module" src="/components/registration/Register.ts"></script>
+        <script type="module" src="/components/navigation/header/Header.ts"></script>
     </head>
     <body>
         <header-nav></header-nav>
         <div id='content-body'></div>
+        <register-page></register-page>
     </body>
 </html> 
