fix(formComponent): load component in index.html

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,6 +11,7 @@
         <script type="module" src="/node_modules/@shoelace-style/shoelace/dist/shoelace.js"></script>
 	<script src="/components/utils/PasswordDialog.ts"></script>
 	<script type="module" src="/components/utils/InputComponent.ts"></script>
+	<script type="module" src="/components/utils/FormComponent.ts"></script>
     </head>
     <body>
         <app-component></app-component>
