--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,6 +12,8 @@
 	<script src="/components/utils/PasswordDialog.ts"></script>
 	<script type="module" src="/components/utils/InputComponent.ts"></script>
 	<script type="module" src="/components/utils/FormComponent.ts"></script>
+        <script src="https://cdn.jsdelivr.net/gh/davidshimjs/qrcodejs/qrcode.min.js"></script>
+
     </head>
     <body>
         <app-component></app-component>
