feat(toast): implement toast component

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,10 +12,12 @@
 	<script src="/components/utils/PasswordDialog.ts"></script>
 	<script type="module" src="/components/utils/InputComponent.ts"></script>
 	<script type="module" src="/components/utils/FormComponent.ts"></script>
+	<script type="module" src="/components/utils/Toast.ts"></script>
         <script src="https://cdn.jsdelivr.net/gh/davidshimjs/qrcodejs/qrcode.min.js"></script>
 
     </head>
     <body>
         <app-component></app-component>
+        <toast-component id="toast"></toast-component>
     </body>
 </html> 
