fix(styles): load them as modules
loading them as modules and inserting the stylesheets into the
components, makes for faster application of these styles.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,12 +4,12 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Coffee Web App</title>
-        <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="css/main.module.css">
         <link rel="manifest" href="manifest.json">
         <script src="https://unpkg.com/htmx.org@1.6.1"></script>
         <script type="module" src="/components/utils/AppComponent.ts"></script>
         <script type="module" src="/node_modules/@shoelace-style/shoelace/dist/shoelace.js"></script>
-	<script src="/components/utils/PasswordDialog.ts"></script>
+	<script type="module" src="/components/utils/PasswordDialog.ts"></script>
 	<script type="module" src="/components/utils/InputComponent.ts"></script>
 	<script type="module" src="/components/utils/FormComponent.ts"></script>
 	<script type="module" src="/components/utils/Toast.ts"></script>
