--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,7 +14,13 @@
 	<script type="module" src="/components/utils/FormComponent.ts"></script>
 	<script type="module" src="/components/utils/Toast.ts"></script>
         <script src="https://cdn.jsdelivr.net/gh/davidshimjs/qrcodejs/qrcode.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
 
+
+        <!-- Embed google font -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     </head>
     <body>
         <app-component></app-component>
