--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
     <head>  
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Coffee Web App</title>
+        <meta name="viewport" content="width=device-width,height=device-height, initial-scale=1.0">
+        <title>Adventskalender</title>
         <link rel="stylesheet" href="css/main.module.css">
         <link rel="manifest" href="manifest.json">
+        <link rel="icon" type="image/x-icon" href="/favicon.png">
         <script src="https://unpkg.com/htmx.org@1.6.1"></script>
         <script type="module" src="/components/utils/AppComponent.ts"></script>
         <script type="module" src="/node_modules/@shoelace-style/shoelace/dist/shoelace.js"></script>
